# BackgroundSubtractor

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/src/: main.cc
include/: backgroundsubtractor.h
src/: backgroundsubtractor.cc  backgroundsubtractor.h  main.cc  subtractor.h
src/subtractors/: basesubtractor.cc  basesubtractor.h  opencv_cnt.cc  opencv_cnt.h  opencv_gmg.cc  opencv_gmg.h  opencv_gsoc.cc  opencv_gsoc.h  opencv_knn.cc  opencv_knn.h  opencv_lsbp.cc  opencv_lsbp.h  opencv_mog.cc  opencv_mog.h  opencv_mog2.cc  opencv_mog2.h  user_median.cc  user_median.h  user_median_implementation.cc  user_median_implementation.h  user_median_v2.cc  user_median_v2.h  user_median_v2_implementation.cc  user_median_v2_implementation.h  user_none.cc  user_none.h
